fix calendar line wrapping

--- a/susa_website/static/css/events.css
+++ b/susa_website/static/css/events.css
@@ -37,3 +37,7 @@ File: "/events/index.php"
     margin-top: 1em;
     margin-left: 3em;
 }
+
+.fc-content {
+    white-space: normal !important;
+}
